--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
-<nav>
-  <ul>
-    <li>Home</li>
-    <li>Custom</li>
-    <li>Sedan</li>
-    <li>SUV</li>
-    <li>Truck</li>
+<nav class="navigation">
+  <ul class="navigationul">
+    <li class="navigationli">Home</li>
+    <li class="navigationli">Custom</li>
+    <li class="navigationli">Sedan</li>
+    <li class="navigationli">SUV</li>
+    <li class="navigationli">Truck</li>
   </ul>
 </nav>
