Checking for HTML and CSS errors

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,65 +1,73 @@
 <h1>Welcome to CSE Motors!</h1>
 
 <section class="deloreanContainer">
-    <div class="deloreanGrid left-column">
-        <div class="deloreanCard">
-            <p class="deloreantxtHead">DMC Delorean</p>
-            <p class="deloreantxt">3 Cup holders</p>
-            <p class="deloreantxt">Superman doors</p>
-            <p class="deloreantxt">Fuzzy dice!</p>
-            <p class="deloreantxt"></p>
-            <button class="deloreanbtn">Own Today</button>
-        </div>
+  <div class="deloreanGrid left-column">
+    <div class="deloreanCard">
+      <p class="deloreantxtHead">DMC Delorean</p>
+      <p class="deloreantxt">3 Cup holders</p>
+      <p class="deloreantxt">Superman doors</p>
+      <p class="deloreantxt">Fuzzy dice!</p>
+      <p class="deloreantxt"></p>
+      <button class="deloreanbtn">Own Today</button>
     </div>
+  </div>
 
-    <div class="deloreanGrid right-column">
-        <img class="deloreanImg" src="/images/vehicles/delorean.jpg" alt="Delorean" />
-    </div>
+  <div class="deloreanGrid right-column">
+    <img
+      class="deloreanImg"
+      src="/images/vehicles/delorean.jpg"
+      alt="Delorean"
+    />
+  </div>
 </section>
 
 <section class="upgradeReviewsContainer">
-    <div class="upgrades">
-        <h3>Delorean Upgrades</h3>
-        <div class="upgradesGrid">
-            <div class="upgradesCard">
-                <div class="upgradesImage">
-                    <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor" />
-                </div>
-                <p class="upgradesLabel">Flux Capacitor</p>
-            </div>
-
-            <div class="upgradesCard">
-                <div class="upgradesImage">
-                    <img src="/images/upgrades/flame.jpg" alt="Flame Decals" />
-                </div>
-                <p class="upgradesLabel">Flame Decals</p>
-            </div>
-
-            <div class="upgradesCard">
-                <div class="upgradesImage">
-                    <img src="/images/upgrades/bumper_sticker.jpg" alt="Bumber Stickers" />
-                </div>
-                <p class="upgradesLabel">Bumber Stickers</p>
-            </div>
-
-            <div class="upgradesCard">
-                <div class="upgradesImage">
-                    <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps" />
-                </div>
-                <p class="upgradesLabel">Hub Caps</p>
-            </div>
+  <div class="upgrades">
+    <h3>Delorean Upgrades</h3>
+    <div class="upgradesGrid">
+      <div class="upgradesCard">
+        <div class="upgradesImage">
+          <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor" />
         </div>
-    </div>
+        <p class="upgradesLabel">Flux Capacitor</p>
+      </div>
 
-    <div class="upgrades">
-        <h3>DMC Delorean Reviews</h3>
-        <div class="upgradesList">
-            <ul>
-                <li>"So fast its almost like traveling in time." (4/5)</li>
-                <li>"Coolest ride on the road" (4/5)</li>
-                <li>"I'm feeling McFly!" (5/5)</li>
-                <li>"The most futureistic ride of our day." (4.5/5)</li>
-                <li>"80's livin and I love it!" (5/5)</li>
-            </ul>
+      <div class="upgradesCard">
+        <div class="upgradesImage">
+          <img src="/images/upgrades/flame.jpg" alt="Flame Decals" />
+        </div>
+        <p class="upgradesLabel">Flame Decals</p>
+      </div>
+
+      <div class="upgradesCard">
+        <div class="upgradesImage">
+          <img
+            src="/images/upgrades/bumper_sticker.jpg"
+            alt="Bumber Stickers"
+          />
+        </div>
+        <p class="upgradesLabel">Bumber Stickers</p>
+      </div>
+
+      <div class="upgradesCard">
+        <div class="upgradesImage">
+          <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps" />
+        </div>
+        <p class="upgradesLabel">Hub Caps</p>
+      </div>
     </div>
+  </div>
+
+  <div class="upgrades">
+    <h3>DMC Delorean Reviews</h3>
+    <div class="upgradesList">
+      <ul>
+        <li>"So fast its almost like traveling in time." (4/5)</li>
+        <li>"Coolest ride on the road" (4/5)</li>
+        <li>"I'm feeling McFly!" (5/5)</li>
+        <li>"The most futureistic ride of our day." (4.5/5)</li>
+        <li>"80's livin and I love it!" (5/5)</li>
+      </ul>
+    </div>
+  </div>
 </section>
