--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -286,4 +286,18 @@ h1 {
   .upgradeReviewsContainer > *:last-child {
     order: 1;
   }
+
+  .upgradesGrid {
+  display: grid;
+  grid-template-columns: .5fr .5fr;
+  grid-template-rows: auto auto;
+  padding-right: 20px;
+  }
+  
+  .upgradesCard {
+  text-align: center;
+  padding-top: 15px;
+  width: 83%;
+  }
+
 }
