Combining two folders

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,10 @@
 <nav class="navigation">
-  <ul class="navigationul">
+  <%- nav %>
+  <!-- <ul class="navigationul">
     <li class="navigationli">Home</li>
     <li class="navigationli">Custom</li>
     <li class="navigationli">Sedan</li>
     <li class="navigationli">SUV</li>
     <li class="navigationli">Truck</li>
-  </ul>
+  </ul> -->
 </nav>
