--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,10 +1,1 @@
-<nav class="navigation">
-  <%- nav %>
-  <!-- <ul class="navigationul">
-    <li class="navigationli">Home</li>
-    <li class="navigationli">Custom</li>
-    <li class="navigationli">Sedan</li>
-    <li class="navigationli">SUV</li>
-    <li class="navigationli">Truck</li>
-  </ul> -->
-</nav>
+<nav class="navigation"><%- nav %></nav>
