--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -376,7 +376,7 @@ h1 {
 
 @media (max-width: 640px) {
   h1 {
-    font-size: 1.0em;
+    font-size: 1.8em;
     text-align: left;
     margin-bottom: 10px;
   }
@@ -456,21 +456,21 @@ h1 {
   }
 
   .upgradesGrid {
-  display: grid;
-  grid-template-columns: .5fr .5fr;
-  grid-template-rows: auto auto;
-  padding-right: 20px;
+    display: grid;
+    grid-template-columns: .5fr .5fr;
+    grid-template-rows: auto auto;
+    padding-right: 20px;
   }
   
   .upgradesCard {
-  text-align: center;
-  padding-top: 15px;
-  width: 83%;
+    text-align: center;
+    padding-top: 15px;
+    width: 83%;
   }
 
   #inv-display {
-  grid-template-columns: repeat(2, 1fr);
-  gap: 15px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
   }
 
   .navigation a {
@@ -478,9 +478,31 @@ h1 {
     padding: 12px 6px;
   }
 
+  .vehicle-content {
+    display: block;
+    grid-template-columns: 1fr; 
+    gap: 10px;
+    align-items: start;
+  }
+
+  .vehicle-image img {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    margin: auto;
+  }
+
+  .vehicle-info h2 {
+    color: #2c3e50;
+    margin-bottom: 20px;
+    font-size: 1.5em;
+    padding-bottom: 8px;
+    margin-top: 50px;
+  }
+
 }
-
-
 
 @media (max-width: 480px) {
   #inv-display {
