Made css changes for contrast

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <section class="deloreanContainer">
   <div class="deloreanGrid left-column">
     <div class="deloreanCard">
-      <p class="deloreantxtHead">DMC Delorean</p>
+      <h2 class="deloreantxtHead">DMC Delorean</h2>
       <p class="deloreantxt">3 Cup holders</p>
       <p class="deloreantxt">Superman doors</p>
       <p class="deloreantxt">Fuzzy dice!</p>
