--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -284,7 +284,7 @@ h1 {
 }
 
 .namePrice h2 a {
-  color: #1ABBDC;
+  color: #157083; 
   text-decoration: none;
 }
 
@@ -374,7 +374,7 @@ h1 {
 
 .error-link {
   text-decoration: none;
-  color: #1ABBDC; 
+  color: #157083; 
 }
 
 
