--- a/views/errors/error-test.ejs
+++ b/views/errors/error-test.ejs
@@ -8,7 +8,7 @@
 
       <main class="serverError">
         <% if (title) { %>
-        <h1><%= title %></h1>
+        <h1 class="serverTitle"><%= title %></h1>
         <p><%- message %></p>
         <% if (title == 500 || title == 'Server Error') { %> <% } %> <% } else {
         %> <% res.redirect('/') %> <% } %>
