--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <img
       class="deloreanImg"
       src="/images/vehicles/delorean.jpg"
-      alt="Image of Delorean"
+      alt="Image of Delorean car"
     />
   </div>
 </section>
