--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <h1>Welcome to CSE Motors!</h1>
 
+<%- messages() %>
+
 <section class="deloreanContainer">
   <div class="deloreanGrid left-column">
     <div class="deloreanCard">
