--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -472,7 +472,7 @@ h1 {
     border-radius: 0.5rem;
     border: 2px solid #1ABBDC;
   }
-  
+
 .register-link {
   text-align: center;
   padding-top: 20px;
@@ -554,6 +554,10 @@ h1 {
 .login-form input[type="text"] {
   flex: 1;
 }
+
+/* ::marker {
+  content: none;
+} */
 
 @media (max-width: 640px) {
   h1 {
