--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,10 +1,21 @@
 <% if (title) { %><% } %>
 <main>
   <h1><%= title %></h1>
-  <%- messages() %>
+  <%- messages() %> <% if (errors) { %>
+  <ul class="notice">
+    <% errors.array().forEach(error => { %>
+    <li><%= error.msg %></li>
+    <% }) %>
+  </ul>
+  <% } %>
 
   <div class="login-container">
-    <form action="/account/login" method="post" class="login-form">
+    <form
+      id="loginForm"
+      action="/account/login"
+      method="post"
+      class="login-form"
+    >
       <div class="form-group">
         <p>All fields are required</p>
         <label for="account_email">Email:</label>
