--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -5,10 +5,20 @@
     <div id="wrapper">
       <%#- include('../partials/header') %> <#%- include('../partials/navigation')
       %> -->
-    <% if (title) { %><% } %> 
+
+
+      <% if (title) { %><% } %> 
       <main>
         <h1><%= title %></h1>
         <%- messages() %>
+
+        <% if (errors) { %>
+        <ul class="notice">
+        <% errors.array().forEach(error => { %>
+        <li><%= error.msg %></li>
+        <%  }) %>
+        </ul>
+        <% } %>
 
         <div class="register-container">
           <form
@@ -25,7 +35,7 @@
                 name="account_firstname"
                 placeholder="Enter your first name"
                 required
-                value="<%= account_firstname || '' %>"
+                required value="<%= locals.account_firstname %>"
               />
             </div>
 
@@ -37,7 +47,7 @@
                 name="account_lastname"
                 placeholder="Enter your last name"
                 required
-                value="<%= account_lastname || '' %>"
+                value="<%= locals.account_lastname || '' %>"
               />
             </div>
 
@@ -49,7 +59,7 @@
                 name="account_email"
                 placeholder="Enter your email address"
                 required
-                value="<%= account_email || '' %>"
+                value="<%= locals.account_email || '' %>"
               />
             </div>
 
@@ -86,7 +96,7 @@
           <div class="login-link">
             <p>
               Already have an account?
-              <a href="/account/login" title="Log in to your account">Log in</a>
+              <a href="/account/login" title="Log in to your account">Login</a>
             </p>
           </div>
         </div>
