--- a/views/errors/error-test.ejs
+++ b/views/errors/error-test.ejs
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <%- include('../partials/head') %>
-  <body>
-    <div id="wrapper">
-      <%- include('../partials/header') %> <%-
-      include('../partials/navigation')%>
-
-      <main class="serverError">
-        <% if (title) { %>
-        <h1 class="serverTitle"><%= title %></h1>
-        <p><%- message %></p>
-        <% if (title == 500 || title == 'Server Error') { %> <% } %> <% } else {
-        %> <% res.redirect('/') %> <% } %>
-      </main>
-    </div>
-  </body>
-</html>
+<div class="serverError">
+  <% if (title) { %>
+  <h1 class="serverTitle"><%= title %></h1>
+  <p><%- message %></p>
+  <% if (title == 500 || title == 'Server Error') { %> <% } %> <% } else { %> <%
+  res.redirect('/') %> <% } %>
+</div>
