--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -445,7 +445,7 @@ h1 {
   display: inline-block;
   padding: 12px 30px;
   background-color: #1ABBDC;
-  color: white;
+  color: black;
   border: none;
   border-radius: 0.3rem;
   font-size: 1.1em;
@@ -474,7 +474,6 @@ h1 {
   justify-content: center;
   max-width: 200px;
   margin: 10px;
-
 }
 
 .btn-primary:hover {
