--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -19,22 +19,28 @@
         name="account_email"
         placeholder="Enter your email address"
         required
+        value="<%= locals.account_email || '' %>"
       />
     </div>
-    <div class="form-group">
+    <div class="form-group password-group">
       <label for="account_password">Password:</label>
-      <input
-        type="password"
-        id="account_password"
-        name="account_password"
-        placeholder="Enter your password"
-        pattern="^(?=.*\d)(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
-        required
-      />
-      <p class="password-requirements">
-        Passwords must be a minimum of 12 characters and include 1 capital
-        letter, 1 number and 1 special character
-      </p>
+      <div class="password-input-container">
+        <input
+          type="password"
+          id="account_password"
+          name="account_password"
+          placeholder="Enter your password"
+          pattern="^(?=.*\d)(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
+          required
+        />
+        <button
+          type="button"
+          id="pswdBtn"
+          class="btn btn-secondary show-password-btn"
+        >
+          Show Password
+        </button>
+      </div>
     </div>
     <div class="form-group">
       <button type="submit" class="btn btn-primary">LOGIN</button>
@@ -48,3 +54,20 @@
     </p>
   </div>
 </div>
+
+<script>
+  const pswdBtn = document.querySelector("#pswdBtn");
+  if (pswdBtn) {
+    pswdBtn.addEventListener("click", function () {
+      const pswdInput = document.getElementById("account_password");
+      const type = pswdInput.getAttribute("type");
+      if (type == "password") {
+        pswdInput.setAttribute("type", "text");
+        pswdBtn.innerHTML = "Hide Password";
+      } else {
+        pswdInput.setAttribute("type", "password");
+        pswdBtn.innerHTML = "Show Password";
+      }
+    });
+  }
+</script>
