Changed h2 tags in management view

--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -11,7 +11,7 @@
 
 <div class="account-management-container centered-content">
   <div class="welcome-message">
-    <p class="welcome-text">You're logged in!</p>
+    <h2 class="welcome-text">You're logged in!</h2>
     <p class="welcome-subtext">Welcome to your account management page.</p>
   </div>
 </div>
