--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -15,5 +15,16 @@
         Add New Inventory
       </a>
     </div>
+    <div>
+      <h2>Manage Inventory</h2>
+      <p>Choose a classification to see those inventory items</p>
+      <%- classificationSelect %>
+
+      <table id="inventoryDisplay"></table>
+
+      <noscript>JavaScript must be enabled to use this page.</noscript>
+
+      <script src="../../js/inventory.js"></script>
+    </div>
   </div>
 </div>
