--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -24,6 +24,11 @@
       >
         Update Account Information
       </a>
+
+      <!-- Wishlist Link -->
+      <a href="/account/wishlist" class="btn btn-secondary">
+        View My Wishlist
+      </a>
     </div>
 
     <!-- Inventory Management for Employees/Admins only -->
